--- a/src/main/resources/templates/fragments/navIndex.html
+++ b/src/main/resources/templates/fragments/navIndex.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4" th:fragment="navbar">
-		<a class="navbar-brand"
-			th:href="@{/showHome}" >Home</a>
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4"
+		th:fragment="navbar">
+		<a class="navbar-brand" th:href="@{/}">Home</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarCollapse" aria-controls="navbarCollapse"
 			aria-expanded="false" aria-label="Toggle navigation">
@@ -19,20 +19,17 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item"><a class="nav-link"
-					th:href="@{/event/showAddForm}">Meus
-						Eventos</a></li>
-				<li class="nav-item"><a class="nav-link"
-					th:href="@{/showHouse/showAddForm}">Minhas
-						Casas de Show</a></li>
 			</ul>
-			<form class="form-inline mt-2 mt-md-0" th:action="@{/logout}" method="post">
-				<!--  <ul class="navbar-nav mr-auto">
+			<form class="form-inline mt-2 mt-md-0">
+				<ul class="navbar-nav mr-auto">
 					<li class="nav-item"><a class="nav-link"
-						th:href="@{/client/showAddForm}">Logout</a></li>
-				</ul>-->
-				<input class="nav-item" type="submit" value="Logout" />
+						th:href="@{/showMyLoginPage}">Entrar</a></li>
+					<li class="nav-item"><a class="nav-link"
+						th:href="@{/client/showAddForm}">Registrar</a></li>
+				</ul>
 			</form>
 		</div>
 	</nav>
 </html>
+
+
