--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,14 +7,14 @@
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 <body>
-	 <div th:replace="@{fragments/nav} :: navbar"></div>  
+	 <div th:replace="@{fragments/navIndex} :: navbar"></div>  
 
 	<div class="site-section bg-light">
 		<div class="container">
 			<div class="row align-items-stretch retro-layout-2">
 				<div class="col-md-4">
 
-					<a th:each="tempEvent : ${events}" th:href="@{/cart/showInfo(eventId=${tempEvent.id})}" class="h-entry mb-30 v-height gradient"
+					<a th:each="tempEvent : ${events}" th:href="@{/event/showEvent(eventId=${tempEvent.id})}" class="h-entry mb-30 v-height gradient"
 						style="background-image: url('images/img_1.jpg')">
 						<h2 th:text="${tempEvent.name}" />
 						<span class="date" th:text="${tempEvent.date}" />
