--- a/src/main/resources/templates/order-form.html
+++ b/src/main/resources/templates/order-form.html
@@ -12,17 +12,17 @@
 	<div th:replace="@{fragments/nav} :: navbar"></div>
 	
 	<div class="container">
-		<form th:action="@{/orderItem/saveOrderItem}"
-			th:object="${orderItem}" method="POST">
+		<form th:action="@{/cart/putInCart}"
+			th:object="${cartItem}" method="POST">
+		 	
+			<input type="hidden"  th:field="*{event}" />
+			<input type="hidden" th:field="*{subTotal}" />
 			
-			<input type="hidden" th:value="${orderItem.event}" th:field="*{event}" />
-			<input type="hidden" th:value="${orderItem.event.price}" th:field="*{subTotal}" />
-			
-			<div class="form-group">
+			 <div class="form-group">
 				<label for="orderQtd">Quantidade de Ingressos</label> 
 				<input type="number" class="form-control" id="orderQtd" 
 				placeholder="Digite a quantidade de ingressos que deseja"  th:field="*{qtd}"/>
-			</div>
+			</div> 
 
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
