--- a/src/main/resources/templates/client-form.html
+++ b/src/main/resources/templates/client-form.html
@@ -27,11 +27,11 @@
 					placeholder="Digite o cpf do cliente" th:field="*{cpf}" />
 			</div>
 
-			<!-- <div class="form-group">
+			<div class="form-group">
 				<label for="clientBirthDate">Data de Nascimento</label> 
 				<input  type="date" class="form-control" placeholder="Digite a data de Nascimento"
 					id="clientBirthDate" th:field="*{birthDate}" />
-			</div>  -->
+			</div>  
 
 			<div class="form-group">
 				<label for="clientEmail">Email</label> <input type="text"
