--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,21 +9,25 @@
 <body>
 	 <div th:replace="@{fragments/nav} :: navbar"></div>  
 
-	<div class="site-section bg-light">
-		<div class="container">
-			<div class="row align-items-stretch retro-layout-2">
-				<div class="col-md-4">
-
-					<a th:each="tempEvent : ${events}" th:href="@{/cart/showInfo(eventId=${tempEvent.id})}" class="h-entry mb-30 v-height gradient"
-						style="background-image: url('images/img_1.jpg')">
-						<h2 th:text="${tempEvent.name}" />
-						<span class="date" th:text="${tempEvent.date}" />
-					</a>
-
+	<div class="row">
+						<div class="col-lg-4 col-md-6 mb-4" th:each="tempEvent : ${events}">
+							<div class="card h-100">
+								<a th:href="@{/cart/showInfo(eventId=${tempEvent.id})}"><img class="card-img-top"
+									alt="" src="data:image/jpge;base64,${tempEvent.imagemProd}"></a>
+								<div class="card-body">
+									<h4 class="card-title">
+										<a th:href="@{/cart/showInfo(eventId=${tempEvent.id})}" th:text="'Ingresso: R$ '+${tempEvent.name}"></a>
+									</h4>
+									<h5 th:text="'Ingresso: R$ '+${tempEvent.price}"></h5>
+									
+								</div>
+								<div class="card-footer">
+									<small class="text-muted">&#9733; &#9733; &#9733;
+										&#9733; &#9734;</small>
+								</div>
+							</div>
+						</div>
 				</div>
-
-			</div>
-		</div>
-	</div>
 </body>
 </html>
+
