--- a/src/main/resources/templates/order-form.html
+++ b/src/main/resources/templates/order-form.html
@@ -13,10 +13,14 @@
 	
 	<div class="container">
 		<form th:action="@{/cart/putInCart}"
-			th:object="${cartItem}" method="POST">
+			th:object="${cart}" method="POST">
 		 	
-			<input type="hidden"  th:field="*{event}" />
-			<input type="hidden" th:field="*{subTotal}" />
+			<input type="hidden"  th:field="${cart.event}" ></input>
+			<input type="hidden"  th:field="${cart.event.price}" ></input>
+			
+			<div class="form-group">
+				<h4 th:text="'Quantidade de ingressos sobrando: '+${event.qtdTicket}"></h4>
+			</div>
 			
 			 <div class="form-group">
 				<label for="orderQtd">Quantidade de Ingressos</label> 
